Opened 10 years ago

Closed 10 years ago

#3964 closed defect (fixed)

ffplay -fs does not start fullscreen on Windows

Reported by: JeffDwork Owned by:
Priority: normal Component: ffplay
Version: unspecified Keywords: fullscreen Windows
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:
How to reproduce:
Run on MS Windows

% ffplay.exe -fs -i video-input-file
ffplay version N-66289-gb76d613
built on Sep 15 2014 22:11:04 with gcc 4.8.3 (GCC)

Screen will flash and video will play but will not be fullscreen.
Press 'f' twice and window will go fullscreen. This does not occur on linux - playback starts fullscreen. The fix is simple - I will submit a patch.

Attachments (1)

ffplay-20140919-202044.log (13.9 KB ) - added by JeffDwork 10 years ago.

Download all attachments as: .zip

Change History (2)

by JeffDwork, 10 years ago

Attachment: ffplay-20140919-202044.log added

comment:1 by Marton Balint, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in 32f1a288e2e6bcaf168f5215205ad0c405dab35f.

Thanks for reporting and testing.

Note: See TracTickets for help on using tickets.